﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2006-03-25 Marc Delisle  <lem9@users.sourceforge.net>
    * db_operations.php, libraries/Table.class.php, 
      libraries/display_export.lib.php libraries/export/sql.php:
      bug #1401864, DROP VIEW instead of DROP TABLE

2006-03-23 Marc Delisle  <lem9@users.sourceforge.net>
    * db_operations.php, tbl_properties_operations.php, 
      libraries/display_export.lib.php, lang/*: start work for bug #1401864,
      generation of DROP VIEW statements where appropriate

2006-03-23 Michal Čihař  <michal@cihar.com>
    * libraries/import/sql.php: Fix handling of -- (bug #1453430).

2006-03-23 Alexander M. Turek  <me@derrabus.de>
    * lang/german-*.inc.php: Updates, sync'ed some technical terms with the
      German MySQL manual.

2006-03-23 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/display_tbl.lib.php: bug #1444417 blobs are centered
    * libraries/common.lib.php: patch #1455286, catch 'permission denied'
      error on SHOW DATABASES, thanks to Bernard Dautrevaux - b-dautrevaux

2006-03-22 Alexander M. Turek  <me@derrabus.de>
    * lang/spanish-*.inc.php: Updates, thanks to Daniel Hinostroza.
    * lang/galician-*.inc.php: Updates, thanks to Xosé Calvo.

2006-03-21 Alexander M. Turek  <me@derrabus.de>
    * libraries/german-*.inc.php:
      - Reviewed recently translated strings;
      - updated some untranslated messages.

2006-03-21 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php:  bug #1427707 Priv->user->pass radio buttons 
      unselectable: Sebastian's fix was not in HEAD
    * libraries/Table.class.php: bug #1439002, drop basetable of a view gives
      error on overview Table.class.php 

2006-03-20 Alexander M. Turek  <me@derrabus.de>
    * Documentation.html: Added a note about Connector/PHP to FAQ 1.17.

2006-03-19 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_structure.php: bug #1445853, overhead should use the